# VST-Synth

./: .gitignore  README.md
code/Synth/: CMakeLists.txt
code/Synth/resource/: myplugineditor.uidesc
code/Synth/source/: myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  synthParams.h  version.h
docs/: bibliography.bib  juniorIS-new.pptx  juniorIS.out  juniorIS.tex
